Some changes to make Flame compatible with ember master. In order to achieve full compatibility, the changes to rename *State to *FlameState need to be made throughout. Luke/Ray

--- a/stylesheets/flame_inspector.css.scss
+++ b/stylesheets/flame_inspector.css.scss
@@ -103,7 +103,7 @@
     &.flame-inspector-ref-view-state {
         border: 1px solid #a7b;
         background-color: #839;
-        &.current-state {
+        &.current-flame-state {
             background-color: crimson;
             border-color: salmon;
             font-weight: bold;
